# logs-anomaly-detection

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
logs/: Tests.py  constant.py  logs-generator.py  preprocessing.py  training.py
models/: isolation_forest.joblib
src/api/: logs_simulator.py  main.py
