[project]
name = "logs-anomaly-detection"
version = "0.1.0"
description = ""
authors = [
    {name = "francis"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy (>=2.2.6,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "faker (>=37.3.0,<38.0.0)",
    "pyod (>=2.0.5,<3.0.0)",
    "umap-learn (>=0.5.7,<0.6.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
